fix z-index issue relating to lack of control

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body > * {
 }
 
 #canvasHolder {
-    z-index: -1;
+    z-index: 1;
 }
 
 header {
